--- a/nbs/cli/cli_config.ipynb
+++ b/nbs/cli/cli_config.ipynb
@@ -132,7 +132,7 @@
     "    return LibraryConfig(\n",
     "        package_name='cjm_fasthtml_tailwind',\n",
     "        cli_command='cjm-tailwind-explore',\n",
-    "        display_name='Tailwind',\n",
+    "        display_name='Tailwind CSS 44',\n",
     "        module_discovery_paths=['utilities'],\n",
     "        core_package='cjm_fasthtml_tailwind.core',\n",
     "        core_utilities=[\n",
