--- a/nbs/cli/utils.ipynb
+++ b/nbs/cli/utils.ipynb
@@ -599,7 +599,28 @@
    "id": "6weugq0awtw",
    "metadata": {},
    "outputs": [],
-   "source": "#| export\ndef get_view_command(\n    content_type: str,  # Type of content ('factory', 'example', 'helper', 'module')\n    module_name: str,  # Module name\n    item_name: str,  # Item name (or feature name for examples)\n    config: Optional[LibraryConfig] = None  # Optional configuration\n) -> str:  # CLI command to view the item\n    \"\"\"Get the CLI command to view a specific item.\"\"\"\n    if config is None:\n        config = get_active_config()\n        \n    cli_cmd = config.cli_command\n    \n    commands = {\n        'factory': f\"{cli_cmd} factory {module_name} {item_name}\",\n        'example': f\"{cli_cmd} example {module_name} {item_name}\",\n        'helper': f\"{cli_cmd} helper {module_name} {item_name}\",\n        'module': f\"{cli_cmd} factories --module {module_name}\"\n    }\n    return commands.get(content_type, \"\")"
+   "source": [
+    "#| export\n",
+    "def get_view_command(\n",
+    "    content_type: str,  # Type of content ('factory', 'example', 'helper', 'module')\n",
+    "    module_name: str,  # Module name\n",
+    "    item_name: str,  # Item name (or feature name for examples)\n",
+    "    config: Optional[LibraryConfig] = None  # Optional configuration\n",
+    ") -> str:  # CLI command to view the item\n",
+    "    \"\"\"Get the CLI command to view a specific item.\"\"\"\n",
+    "    if config is None:\n",
+    "        config = get_active_config()\n",
+    "        \n",
+    "    cli_cmd = config.cli_command\n",
+    "    \n",
+    "    commands = {\n",
+    "        'factory': f\"{cli_cmd} factory {module_name} {item_name}\",\n",
+    "        'example': f\"{cli_cmd} example {module_name} {item_name}\",\n",
+    "        'helper': f\"{cli_cmd} helper {module_name} {item_name}\",\n",
+    "        'module': f\"{cli_cmd} factories --module {module_name}\"\n",
+    "    }\n",
+    "    return commands.get(content_type, \"\")"
+   ]
   },
   {
    "cell_type": "code",
@@ -638,7 +659,70 @@
    "id": "djevbra8dit",
    "metadata": {},
    "outputs": [],
-   "source": "#| export\nimport importlib\nimport pkgutil\n\ndef discover_utility_modules(\n    config: Optional[LibraryConfig] = None  # Optional configuration, uses active if not provided\n) -> List[Tuple[str, Any]]:  # List of (module_name, module) tuples\n    \"\"\"Discover all utility modules based on configuration.\"\"\"\n    if config is None:\n        config = get_active_config()\n    \n    modules = []\n    \n    # Iterate through all configured discovery paths\n    for discovery_path in config.module_discovery_paths:\n        package_path = f\"{config.package_name}.{discovery_path}\"\n        \n        try:\n            # Import the package\n            package = importlib.import_module(package_path)\n            \n            # Get the package path\n            if hasattr(package, '__path__'):\n                # Iterate through all modules in the package\n                for importer, modname, ispkg in pkgutil.iter_modules(package.__path__, \n                                                                     prefix=f'{package_path}.'):\n                    if not ispkg:  # We only want modules, not sub-packages\n                        try:\n                            module = importlib.import_module(modname)\n                            # Extract just the module name without the full path\n                            short_name = modname.split('.')[-1]\n                            modules.append((short_name, module))\n                        except ImportError:\n                            pass  # Skip modules that can't be imported\n        except ImportError:\n            pass  # Package not found\n    \n    return sorted(modules, key=lambda x: x[0])  # Sort by module name"
+   "source": [
+    "#| export\n",
+    "import importlib\n",
+    "import pkgutil\n",
+    "\n",
+    "def discover_utility_modules(\n",
+    "    config: Optional[LibraryConfig] = None,  # Optional configuration, uses active if not provided\n",
+    "    include_submodules: bool = True  # Whether to include submodules\n",
+    ") -> List[Tuple[str, Any]]:  # List of (module_name, module) tuples\n",
+    "    \"\"\"Discover all utility modules based on configuration, including submodules.\"\"\"\n",
+    "    if config is None:\n",
+    "        config = get_active_config()\n",
+    "    \n",
+    "    modules = []\n",
+    "    \n",
+    "    def discover_modules_recursive(package_path: str, base_name: str = \"\"):\n",
+    "        \"\"\"Recursively discover modules and submodules.\"\"\"\n",
+    "        try:\n",
+    "            # Import the package\n",
+    "            package = importlib.import_module(package_path)\n",
+    "            \n",
+    "            # Get the package path\n",
+    "            if hasattr(package, '__path__'):\n",
+    "                # Iterate through all modules in the package\n",
+    "                for importer, modname, ispkg in pkgutil.iter_modules(package.__path__, \n",
+    "                                                                     prefix=f'{package_path}.'):\n",
+    "                    try:\n",
+    "                        module = importlib.import_module(modname)\n",
+    "                        # Extract the relative name from the base discovery path\n",
+    "                        if base_name:\n",
+    "                            short_name = modname.replace(f\"{config.package_name}.{base_name}.\", \"\")\n",
+    "                        else:\n",
+    "                            short_name = modname.split('.')[-1]\n",
+    "                        \n",
+    "                        if ispkg and include_submodules:\n",
+    "                            # If it's a package, recursively discover its modules\n",
+    "                            submodules = discover_modules_recursive(modname, base_name or discovery_path)\n",
+    "                            modules.extend(submodules)\n",
+    "                        else:\n",
+    "                            # Add the module itself\n",
+    "                            modules.append((short_name, module))\n",
+    "                    except ImportError:\n",
+    "                        pass  # Skip modules that can't be imported\n",
+    "        except ImportError:\n",
+    "            pass  # Package not found\n",
+    "        \n",
+    "        return modules\n",
+    "    \n",
+    "    # Iterate through all configured discovery paths\n",
+    "    for discovery_path in config.module_discovery_paths:\n",
+    "        package_path = f\"{config.package_name}.{discovery_path}\"\n",
+    "        discovered = discover_modules_recursive(package_path, discovery_path)\n",
+    "        modules.extend(discovered)\n",
+    "    \n",
+    "    # Remove duplicates while preserving order\n",
+    "    seen = set()\n",
+    "    unique_modules = []\n",
+    "    for name, module in modules:\n",
+    "        if name not in seen:\n",
+    "            seen.add(name)\n",
+    "            unique_modules.append((name, module))\n",
+    "    \n",
+    "    return sorted(unique_modules, key=lambda x: x[0])  # Sort by module name"
+   ]
   },
   {
    "cell_type": "code",
@@ -646,7 +730,29 @@
    "id": "3ba35cd1",
    "metadata": {},
    "outputs": [],
-   "source": "#| export\ndef iterate_all_modules_with_items(\n    extractor_func,    # Function to extract items from a module - TODO: Add type hint\n    module_filter: Optional[str] = None,  # Optional specific module to filter for\n    config: Optional[LibraryConfig] = None  # Optional configuration\n) -> Dict[str, List[Any]]:  # Dictionary mapping module names to their items\n    \"\"\"Generic iterator for extracting items from all modules.\"\"\"\n    if config is None:\n        config = get_active_config()\n        \n    all_items = {}\n    \n    for module_name, module in discover_utility_modules(config):\n        if module_filter and module_name != module_filter:\n            continue\n            \n        items = extractor_func(module, module_name)\n        if items:  # Only include modules that have items\n            all_items[module_name] = items\n    \n    return all_items"
+   "source": [
+    "#| export\n",
+    "def iterate_all_modules_with_items(\n",
+    "    extractor_func,    # Function to extract items from a module - TODO: Add type hint\n",
+    "    module_filter: Optional[str] = None,  # Optional specific module to filter for\n",
+    "    config: Optional[LibraryConfig] = None  # Optional configuration\n",
+    ") -> Dict[str, List[Any]]:  # Dictionary mapping module names to their items\n",
+    "    \"\"\"Generic iterator for extracting items from all modules.\"\"\"\n",
+    "    if config is None:\n",
+    "        config = get_active_config()\n",
+    "        \n",
+    "    all_items = {}\n",
+    "    \n",
+    "    for module_name, module in discover_utility_modules(config):\n",
+    "        if module_filter and module_name != module_filter:\n",
+    "            continue\n",
+    "            \n",
+    "        items = extractor_func(module, module_name)\n",
+    "        if items:  # Only include modules that have items\n",
+    "            all_items[module_name] = items\n",
+    "    \n",
+    "    return all_items"
+   ]
   },
   {
    "cell_type": "code",
@@ -772,7 +878,24 @@
    "id": "cb5233ef-9f06-4a16-9e7b-4e13f8c9f96e",
    "metadata": {},
    "outputs": [],
-   "source": "#| export\ndef list_utility_modules(\n    config: Optional[LibraryConfig] = None  # Optional configuration\n) -> Dict[str, str]:  # Dictionary mapping module names to their docstrings\n    \"\"\"List all available utility modules with their docstrings.\"\"\"\n    if config is None:\n        config = get_active_config()\n        \n    modules_info = {}\n    \n    for module_name, module in discover_utility_modules(config):\n        # Get module docstring\n        doc = inspect.getdoc(module) or \"No documentation available\"\n        modules_info[module_name] = doc\n    \n    return modules_info"
+   "source": [
+    "#| export\n",
+    "def list_utility_modules(\n",
+    "    config: Optional[LibraryConfig] = None  # Optional configuration\n",
+    ") -> Dict[str, str]:  # Dictionary mapping module names to their docstrings\n",
+    "    \"\"\"List all available utility modules with their docstrings.\"\"\"\n",
+    "    if config is None:\n",
+    "        config = get_active_config()\n",
+    "        \n",
+    "    modules_info = {}\n",
+    "    \n",
+    "    for module_name, module in discover_utility_modules(config):\n",
+    "        # Get module docstring\n",
+    "        doc = inspect.getdoc(module) or \"No documentation available\"\n",
+    "        modules_info[module_name] = doc\n",
+    "    \n",
+    "    return modules_info"
+   ]
   },
   {
    "cell_type": "code",
